# Laptop-Repair

./: .gitignore  README.md  app.py  pyproject.toml  report.md
src/laptop_repair/: crew.py  main.py
src/laptop_repair/config/: tasks.yaml
src/laptop_repair/tools/: custom_tool.py
